--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,12 +48,13 @@
     .fotinhos {
         display: flex;
         flex-direction: column;
+        background-color: rgba(215, 72, 247, 0.2);;
+        padding-top: 30px;
 
         .titulo-foto {
             padding: 10px 5px;
             color: rgba(215, 72, 247);
             font-weight: bold;
-            background-color: rgba(215, 72, 247, 0.2);
         }
 
         img {
